--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 
     <div class="calculator">
+        <center>
+            <h1>My Calculator</h1>               
+        </center>
+
         <input type="text" id="display" disabled>
         
         <div class="buttons">
