fixed error on  CI/CD

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="calculator">
         <center>
-            <h1>My Calculator1</h1>               
+            <h1>My Calculator</h1>               
         </center>
 
         <input type="text" id="display" disabled>
